added header plus responsiveness

--- a/index.html
+++ b/index.html
@@ -18,30 +18,24 @@
 
 <body>
     <header>
-        <table width="100%">
-            <tr>
-                <td>
-                    <a href="#">
-                        <img src="logo.png" alt="Logo" width="100">
-                    </a>
-                </td>
-                <td align="right">
-                    <nav>
-                        <a href="/index.html">Home</a> /
-                        <a href="/Projects.html">Projects</a> /
-                        <a href="/Articles.html">Articles</a> /
-                        <a href="/Contact.html">Contact</a> /
-                        </ul>
-                    </nav>
-                </td>
-            </tr>
-        </table>
-    </header>
-    <section>
-        <div align="center">
-            <h1><i>Frontend Developer</i></h1>
-            <p> html only with proper layout,no styling</p>
+        <div class="logo">
+            <a href="#">
+                <img src="./images/logo.jpg" alt="Logo" width="50">
+            </a>
         </div>
+
+        <nav>
+            <a href="/index.html">Home</a>
+            <a href="/Projects.html">Projects</a>
+            <a href="/Articles.html">Articles</a>
+            <a href="/Contact.html">Contact</a>
+            </ul>
+        </nav>
+
+    </header>
+    <section class="frontend-section">
+        <h1><i>Frontend Developer</i></h1>
+        <p> html only with proper layout,no styling</p>
     </section>
 
     <main>
