added section two css

--- a/index.html
+++ b/index.html
@@ -39,72 +39,67 @@
     </section>
 
     <main>
-        <table>
-            <tr>
-                <td>
-                    <h3><i>Projects</i></h3>
-                    <p>HTML Only Portfolio</p>
-                    <p>Calculator</p>
-                    <p>Quiz App</p>
-                    <p>Count Down Timer</p>
-                    <p>Product Upcoming Page</p>
-                </td>
-                <td>
-                    <h3><i> Work Experience</i></h3>
-                    <p><i>roadmap.sh</i></p>
-                    <p>
-                        Solved all the frontend projects
-                    </p>
-                    <a href="#">Visit my profile</a>
-                    <br />
+        <div>
+            <h3><i>Projects</i></h3>
+            <p>HTML Only Portfolio</p>
+            <p>Calculator</p>
+            <p>Quiz App</p>
+            <p>Count Down Timer</p>
+            <p>Product Upcoming Page</p>
+        </div>
+        <div>
+            <h3><i> Work Experience</i></h3>
+            <p><i>roadmap.sh</i></p>
+            <p>
+                Solved all the frontend projects
+            </p>
+            <a href="#">Visit my profile</a>
+            <br />
 
-                    <p><i>Open Source work</i></p>
-                    <p>Contributed to 50 open source projects.Made my own projects with 200 Github stars</p>
-                    <a href="#">Visit my Github profile</a>
-                </td>
-                <td>
-                    <h3><i> Education</i></h3>
-                    <p>Graduated with a 3.76 out of 4 CGPA.Won ACME Hackthon.Organized 30 sessions.</p>
-                    <br />
-                    <p>Courses I took</p>
-                    <ul>
-                        <li>Object-oriented programming</li>
-                        <li>Data structures and Algorithms</li>
-                        <li>Web Engineering</li>
-                        <li>Articifial Intelligence</li>
-                        <li>Human Computer Interaction</li>
-                        <li>Computer Graphics</li>
-                        <li>Database Management Systems</li>
-                        <li>Distributed Database Systems</li>
-                        <li>Discreet Mathematics</li>
-                    </ul>
-                </td>
-            </tr>
-        </table>
+            <p><i>Open Source work</i></p>
+            <p>Contributed to 50 open source projects.Made my own projects with 200 Github stars</p>
+            <a href="#">Visit my Github profile</a>
+        </div>
+        <div>
+            <h3><i> Education</i></h3>
+            <p>Graduated with a 3.76 out of 4 CGPA.Won ACME Hackthon.Organized 30 sessions.</p>
+            <br />
+            <p>Courses I took</p>
+            <ul>
+                <li>Object-oriented programming</li>
+                <li>Data structures and Algorithms</li>
+                <li>Web Engineering</li>
+                <li>Articifial Intelligence</li>
+                <li>Human Computer Interaction</li>
+                <li>Computer Graphics</li>
+                <li>Database Management Systems</li>
+                <li>Distributed Database Systems</li>
+                <li>Discreet Mathematics</li>
+            </ul>
+        </div>
 
     </main>
     <section>
         <h3><i>Reviews from my teachers</i></h3>
-        <table width="100%">
-            <tr align="center">
-                <td>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
-                    Professor.
-                    <span>John Doe</span>
-                    <p>Assistant Professor</p>
-                </td>
-                <td>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
-                    Professor.
-                    <span>John Doe</span>
-                    <p>Assistant Professor</p>
+        <div class="review-one">
+            <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
+                Professor.</p>
+            <span>John Doe</span>
+            <p>Assistant Professor</p>
+        </div>
+        <div class="review-two">
+            <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
+                Professor.</p>
+            <span>John Doe</span>
+            <p>Assistant Professor</p>
+        </div>
 
-                </td>
-                <td>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
-                    Professor.
-                    <span>John Doe</span>
-                    <p>Assistant Professor</p>
-                </td>
-            </tr>
-        </table>
+        <div class="review-three">
+            <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
+                Professor.</p>
+            <span>John Doe</span>
+            <p>Assistant Professor</p>
+        </div>
     </section>
     <footer align="center">
         <p> &copy;all rights reserved 2025</p>
