added last section css reviews

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="icon" href="favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 
 </head>
 
@@ -79,26 +84,29 @@
         </div>
 
     </main>
-    <section>
+    <section class="reviews">
         <h3><i>Reviews from my teachers</i></h3>
-        <div class="review-one">
-            <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
-                Professor.</p>
-            <span>John Doe</span>
-            <p>Assistant Professor</p>
-        </div>
-        <div class="review-two">
-            <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
-                Professor.</p>
-            <span>John Doe</span>
-            <p>Assistant Professor</p>
-        </div>
 
-        <div class="review-three">
-            <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
-                Professor.</p>
-            <span>John Doe</span>
-            <p>Assistant Professor</p>
+        <div class="review-items">
+            <div class="review-one">
+                <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
+                    Professor.</p>
+                <span>John Doe</span>
+                <p>Assistant Professor</p>
+            </div>
+            <div class="review-two">
+                <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
+                    Professor.</p>
+                <span>John Doe</span>
+                <p>Assistant Professor</p>
+            </div>
+
+            <div class="review-three">
+                <p>John Doe was a brilliant student;always stood out with his assignments. John Doe Assistant
+                    Professor.</p>
+                <span>John Doe</span>
+                <p>Assistant Professor</p>
+            </div>
         </div>
     </section>
     <footer align="center">
