added contact page init

--- a/Projects.html
+++ b/Projects.html
@@ -11,30 +11,33 @@
 
     <!-- Link to Favicon -->
     <link rel="icon" href="favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 
 
 </head>
 
 <body>
     <header>
-        <table width="100%">
-            <tr>
-                <td>
-                    <a href="#">
-                        <img src="logo.png" alt="Logo" width="100">
-                    </a>
-                </td>
-                <td align="right">
-                    <nav>
-                        <a href="/index.html">Home</a> /
-                        <a href="/Projects.html">Projects</a> /
-                        <a href="/Articles.html">Articles</a> /
-                        <a href="/Contact.html">Contact</a> /
-                        </ul>
-                    </nav>
-                </td>
-            </tr>
-        </table>
+        <div class="logo">
+            <a href="#">
+                <img src="./images/logo.jpg" alt="Logo" width="50">
+            </a>
+        </div>
+
+        <nav>
+            <a href="/index.html">Home</a>
+            <a href="/Projects.html">Projects</a>
+            <a href="/Articles.html">Articles</a>
+            <a href="/Contact.html">Contact</a>
+            </ul>
+        </nav>
+
     </header>
 
 
