--- a/Articles.html
+++ b/Articles.html
@@ -11,37 +11,35 @@
 
     <!-- Link to Favicon -->
     <link rel="icon" href="favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 
 
 </head>
 
 <body>
     <header>
-        <table width="100%">
-            <tr>
-                <td>
-                    <a href="#">
-                        <img src="logo.png" alt="Logo" width="100">
-                    </a>
-                </td>
-                <td align="right">
-                    <nav>
-                        <a href="/index.html">Home</a> /
-                        <a href="/Projects.html">Projects</a> /
-                        <a href="/Articles.html">Articles</a> /
-                        <a href="/Contact.html">Contact</a> /
-                        </ul>
-                    </nav>
-                </td>
-            </tr>
-        </table>
-    </header>
-    <section>
-        <div align="center">
-            <h1><i>Frontend Developer</i></h1>
-            <p> html only with proper layout,no styling</p>
+        <div class="logo">
+            <a href="#">
+                <img src="./images/logo.jpg" alt="Logo" width="50">
+            </a>
         </div>
-    </section>
+
+        <nav>
+            <a href="/index.html">Home</a>
+            <a href="/Projects.html">Projects</a>
+            <a href="/Articles.html">Articles</a>
+            <a href="/Contact.html">Contact</a>
+            </ul>
+        </nav>
+
+    </header>
+
 
 
     <h3>Articles</h3>
