--- a/Contact.html
+++ b/Contact.html
@@ -11,52 +11,53 @@
 
     <!-- Link to Favicon -->
     <link rel="icon" href="favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
 
 </head>
 
 <body>
     <header>
-        <table width="100%">
-            <tr>
-                <td>
-                    <a href="#">
-                        <img src="logo.png" alt="Logo" width="100">
-                    </a>
-                </td>
-                <td align="right">
-                    <nav>
-                        <a href="/index.html">Home</a> /
-                        <a href="/Projects.html">Projects</a> /
-                        <a href="/Articles.html">Articles</a> /
-                        <a href="/Contact.html">Contact</a> /
-                        </ul>
-                    </nav>
-                </td>
-            </tr>
-        </table>
+        <div class="logo">
+            <a href="#">
+                <img src="./images/logo.jpg" alt="Logo" width="50">
+            </a>
+        </div>
+
+        <nav>
+            <a href="/index.html">Home</a>
+            <a href="/Projects.html">Projects</a>
+            <a href="/Articles.html">Articles</a>
+            <a href="/Contact.html">Contact</a>
+            </ul>
+        </nav>
+
     </header>
-    <section>
+    <section class="contact-us">
         <h3>Contact Us</h3>
-        <form method="post" action="">
+        <form method="post" action="/formFunction">
             <div>
                 <label>Name</label>
                 <input type="text" name="name" placeholder="Name" />
             </div>
-            <br />
+
             <div>
                 <label>Email</label>
                 <input type="email" name="email" placeholder="Email" />
-
             </div>
 
-            <br />
             <div>
                 <label>Message: </label>
                 <textarea name="message" placeholder="Message">
-
             </div>
-
+            <div>
+                <button type="submit" class="form-button">Submit</button>
+            </div>
         </form>
 
     </section>
