--- a/Contact.html
+++ b/Contact.html
@@ -40,6 +40,7 @@
     </header>
     <section class="contact-us">
         <h3>Contact Us</h3>
+        <p>Got a question? We'd love to hear from you.Send us a message and we'll respond as soon as possible.</p>
         <form method="post" action="/formFunction">
             <div>
                 <label>Name</label>
