--- a/Contact.html
+++ b/Contact.html
@@ -39,8 +39,13 @@
 
     </header>
     <section class="contact-us">
-        <h3>Contact Us</h3>
-        <p>Got a question? We'd love to hear from you.Send us a message and we'll respond as soon as possible.</p>
+        <div class="contact-us-details">
+            <h3 id="contact-us-title">Contact Us</h3>
+            <p class="contact-us-description">Got a question? We'd love to hear from you.Send us a message and we'll
+                respond
+                as soon as possible.</p>
+        </div>
+
         <form method="post" action="/formFunction">
             <div>
                 <label>Name</label>
@@ -60,6 +65,7 @@
                 <button type="submit" class="form-button">Submit</button>
             </div>
         </form>
+
 
     </section>
 
